# Char0Gauss

./: .travis.yml  LICENSE  Makefile.am  Makefile.in  PackageInfo.g  README.md  autogen.sh  configure.ac  init.g  makedoc.g  read.g
.github/workflows/: CI.yml
gap/: Char0Gauss.gd  Char0Gauss.gi  LinAlgPadic.gd  LinAlgPadic.gi  PadicHelpers.gd  PadicHelpers.gi  Util.gd  Util.gi
scripts/: build_gap.sh  plot_results.py
src/: Char0Gauss.cc
tst/: basic.tst  chrem.tst  padic.tst  testall.g  util.tst
